turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:23: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  right()
  ^HouseMany:25: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  left()
  ^HouseMany:30: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  left()
  ^HouseMany:32: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  right()
  ^HouseMany:45: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  right()
  ^HouseMany:47: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  left()
  ^